--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,8 +78,11 @@ jobs:
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
       - run:
+          name: Upload to S3
+          command: aws s3 cp /tmp/workspace/lambda/function.zip s3://serverless-fastapi-lambda-dev/v1.0.0/function.zip
+      - run:
           name: Deploy new Lambda
-          command: aws lambda update-function-code --function-name  fastapi-serverless-dev --zip-file /tmp/workspace/lambda/function.zip
+          command: aws lambda update-function-code --function-name serverless-fastapi-lambda-dev --s3-bucket serverless-fastapi-lambda-dev --s3-key v1.0.0/function.zip
 
 
 
