--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ MarkupSafe==1.1.1
 orjson==3.3.0
 promise==2.3
 pydantic==1.6.1
+python-dotenv==0.14.0
 python-multipart==0.0.5
 PyYAML==5.3.1
 requests==2.24.0
