--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==0.5.0
 aniso8601==7.0.0
 async-exit-stack==1.0.1
 async-generator==1.10
+attrs==19.3.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
@@ -14,13 +15,21 @@ graphql-relay==2.0.1
 h11==0.9.0
 httptools==0.1.1
 idna==2.10
+importlib-metadata==1.7.0
+iniconfig==1.0.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 mangum==0.9.2
 MarkupSafe==1.1.1
+more-itertools==8.4.0
 orjson==3.3.0
+packaging==20.4
+pluggy==0.13.1
 promise==2.3
+py==1.9.0
 pydantic==1.6.1
+pyparsing==2.4.7
+pytest==6.0.1
 python-dotenv==0.14.0
 python-multipart==0.0.5
 PyYAML==5.3.1
@@ -28,9 +37,11 @@ requests==2.24.0
 Rx==1.6.1
 six==1.15.0
 starlette==0.13.6
+toml==0.10.1
 typing-extensions==3.7.4.2
 ujson==3.0.0
 urllib3==1.25.10
 uvicorn==0.11.6
 uvloop==0.14.0
 websockets==8.1
+zipp==3.1.0
