added circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,32 @@
 version: 2.1
-jobs:  
-  my-job-one:  
-    docker:
-    # specify the version you desire here
-    - image: python:3.7
-    steps:      
-      - checkout      
-      - run:         
-          name: Setup Virtual env         
-          command: |           
-            virtualenv -p python3.7 env            
-            source env/bin/activate      
-      - run:         
-          name: Install Dependencies         
-          command: pip install -r requirements.txt      
-      - run:         
-          name: Package Dependencies         
-          command: pip install --target ./package -r requirements.txt      
-      - run:         
-          name: Create Zipfile archive of Dependencies         
-          command: |            
-            cd ./package            
-            zip -r9 ../function.zip .      
-      - run:         
-          name: Add App to Zipfile         
-          command: zip -g ./function.zip main.py .env -r app
 
+orbs:  
+  python: circleci/python@0.3.2
+
+jobs:  
+  my-job-one:    
+    executor:
+      name: 'python/default'
+      tag: '3.7'
+    steps:
+      - checkout
+      - run:
+          name: Setup Virtual env
+          command: |            
+            virtualenv -p python3.7 env            
+            source env/bin/activate
+      - run:
+          name: Install Dependencies
+          command: pip install -r requirements.txt
+      - run:
+          name: Package Dependencies
+          command: pip install --target ./package -r requirements.txt      
+        
 workflows:  
   my-workflow-name:    
     jobs:      
-      - my-job-one:          
+      - my-job-one:
           filters:            
-            branches:              
-              only:                
-                - cicd-test-1
+            branches:
+              only:
+                - cicd-demo-dev
