--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,23 @@
+attrs==20.2.0
+click==7.1.2
 fastapi==0.61.1
+h11==0.9.0
+httptools==0.1.1
+importlib-metadata==1.7.0
+iniconfig==1.0.1
 mangum==0.9.2
+more-itertools==8.5.0
+packaging==20.4
+pluggy==0.13.1
+py==1.9.0
+pydantic==1.6.1
+pyparsing==2.4.7
 pytest==6.0.1
+six==1.15.0
+starlette==0.13.6
+toml==0.10.1
+typing-extensions==3.7.4.3
 uvicorn==0.11.8
+uvloop==0.14.0
+websockets==8.1
+zipp==3.1.0
