--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   python: circleci/python@0.3.2
 
 jobs:  
-  my-job-one:    
+  build-and-test:
     executor:
       name: python/default
       tag: '3.7'
@@ -23,9 +23,9 @@ jobs:
           command: python -m pytest
     
 workflows:  
-  my-workflow-name:    
+  build-test-and-deploy:    
     jobs:      
-      - my-job-one:
+      - build-and-test:
           filters:            
             branches:
               only:
