--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,20 @@ version: 2.1
 orbs:  
   python: circleci/python@0.3.2
 
+references:
+  workspace_root: &workspace_root
+    /tmp/workspace
+  attach_workspace: &attach_workspace
+    attach_workspace:
+      at: *workspace_root
+
 jobs:  
   build-and-test:
     executor:
       name: python/default
       tag: '3.7'
     steps:
+      - *attach_workspace
       - checkout
       - run:
           name: Setup Virtual env
@@ -32,6 +40,16 @@ jobs:
       - run:
           name: Add App to Zipfile
           command: zip -g ./function.zip -r app
+      - run:
+          name: "Persist Python assets" # Move our Zipped Lambda into our workspace.
+          command: |
+            set -exu
+            mkdir -p /tmp/workspace/lambda
+            mv function.zip /tmp/workspace/lambda/
+      - persist_to_workspace: # store the built files into the workspace for other jobs.
+            root: *workspace_root
+            paths:
+              - lambda
     
 workflows:  
   build-test-and-deploy:    
