--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           name: Add App to Zipfile
           command: zip -g ./function.zip -r app
       - persist_to_workspace: # store the built files into the workspace for other jobs.
-          root: /tmp/workspace
+          root: workspace
           paths:
             - lambda
       - run:
