--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,16 +43,16 @@ jobs:
       - run:
           name: Add App to Zipfile
           command: zip -g ./function.zip -r app
-      - persist_to_workspace: # store the built files into the workspace for other jobs.
-          root: .
-          paths:
-            - .
       - run:
           name: "Persist Python assets" # Move our Zipped Lambda into our workspace.
           command: |
             set -exu
             mkdir -p /tmp/workspace/lambda
             mv function.zip /tmp/workspace/lambda/
+      - persist_to_workspace: # store the built files into the workspace for other jobs.
+          root: ./workspace
+          paths:
+            - lambda
 
     
 workflows:  
