--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
             mkdir -p /tmp/workspace/lambda
             mv function.zip /tmp/workspace/lambda/
       - persist_to_workspace: # store the built files into the workspace for other jobs.
-          root: ./workspace
+          root: ./tmp/workspace
           paths:
             - lambda
 
