--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:  
   python: circleci/python@0.3.2
+  aws-cli: circleci/aws-cli@1.2.1
 
 jobs:  
   build-and-test:
@@ -10,6 +11,10 @@ jobs:
       tag: '3.7'
     steps:
       - checkout
+      # - save_cache:
+      #     key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+      #     paths:
+      #       - ~/serverless-fastapi-demo
       - run:
           name: Setup Virtual env
           command: |            
@@ -29,12 +34,40 @@ jobs:
       - run:
           name: Add App to Zipfile
           command: zip -g ./function.zip -r app
+      - persist_to_workspace: # store the built files into the workspace for other jobs.
+          root: .
+          paths:
+            - function.zip
+  
+  deploy-dev: 
+    executor: aws-cli/default  
+    steps:    
+      - attach_workspace:
+          at: ./
+      - aws-cli/setup:
+          aws-region: AWS_DEFAULT_REGION
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+      - run:
+          name: Upload to S3        
+          command: aws s3 cp function.zip s3://serverless-fastapi-lambda-dev/function.zip
+      - run:        
+          name: Deploy new Lambda        
+          command: aws lambda update-function-code --function-name serverless-fastapi-lambda-dev --s3-bucket serverless-fastapi-lambda-dev --s3-key function.zip
+
     
 workflows:  
   build-test-and-deploy:    
     jobs:      
       - build-and-test:
           filters:            
+            branches:
+              only:
+                - cicd-test-1
+      - deploy-dev:
+          requires:
+            - build-and-test    
+          filters:        
             branches:
               only:
                 - cicd-test-1
