--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,10 @@ jobs:
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
       - run:
           name: Upload to S3        
-          command: aws s3 cp function.zip s3://serverless-fastapi-lambda-dev/function.zip
+          command: aws s3 cp function.zip s3://cicd-test-1/function.zip
       - run:        
           name: Deploy new Lambda        
-          command: aws lambda update-function-code --function-name serverless-fastapi-lambda-dev --s3-bucket serverless-fastapi-lambda-dev --s3-key function.zip
+          command: aws lambda update-function-code --function-name cicd-test-1 --s3-bucket cicd-test-1 --s3-key function.zip
 
     
 workflows:  
