--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: Create Zipfile archive of Dependencies
           command: |
-            cd env/lib/python3.7/site-packages
+            cd ./env/lib/python3.7/site-packages
             zip -r9 ../../../../function.zip .
       - run:
           name: Add App to Zipfile
