--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,11 @@ jobs:
           name: Setup Virtual env
           command: |            
             virtualenv -p python3.7 env
+            source ./env/bin/activate
+            pip install -r requirements.txt
             cd ./env/lib/python3.7/site-packages
             ls -a
-            cd ../../../../
-            source ./env/bin/activate
+            
       - run:
           name: Install Dependencies
           command: |
