--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,9 @@ jobs:
           command: python -m pytest
       - run:
           name: Create Zipfile archive of Dependencies
-          command: cd env/lib/python3.7/site-packages && /
-            ls -a && /
+          command: >
+            cd env/lib/python3.7/site-packages;
+            ls -a;
             zip -r9 ../../../../function.zip .
       - run:
           name: Add App to Zipfile
