--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,9 @@ jobs:
           name: Install Dependencies
           command: pip install -r requirements.txt
       - run:
+          name: Create ENV file
+          command: env > .env
+      - run:
           name: Test
           command: pytest
       - run:
