updating config to add env to zip

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
             zip -r9 ../../../../function.zip .
       - run:
           name: Add App to Zipfile
-          command: zip -g ./function.zip -r app
+          command: zip -g ./function.zip .env -r app
       - persist_to_workspace: # store the built files into the workspace for other jobs.
           root: .
           paths:
