--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,29 +1,29 @@
 version: 2.1
 
-orb:
+orbs:  
   python: circleci/python@1.0.0
 
-jobs:
-  build-and-test:
+jobs:  
+  build-and-test:    
     executor:
       name: python/default
       tag: '3.7'
     steps:
       - checkout
       - run:
-          name: Setup Virtual Env
-          command: |
-            virtualenv -p python3.7 env
+          name: Setup Virtual env
+          command: |            
+            virtualenv -p python3.7 env            
             echo "source ./env/bin/activate" >> $BASH_ENV
       - run:
           name: Install Dependencies
           command: pip install -r requirements.txt
-
-workflows:
-  build-test-and-deploy:
+    
+workflows:  
+  build-test-and-deploy:    
     jobs:
       - build-and-test:
-        filters:
-          branches:
-            only:
-              - cicd-demo-dev
+          filters:            
+            branches:
+              only:
+                - cicd-demo-dev
