--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs:
       - run:
           name: Install Dependencies
           command: pip install -r requirements.txt
+      - run:
+          name: Test
+          command: pytest
     
 workflows:  
   build-test-and-deploy:    
