package lambda steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,14 @@ jobs:
       - run:
           name: Test
           command: pytest
+      - run:
+          name: Create Zipfile archive of Dependencies
+          command: |
+            cd env/lib/python3.7/site-packages
+            zip -r9 ../../../../function.zip .
+      - run:
+          name: Add App to Zipfile
+          command: zip -g ./function.zip -r app
     
 workflows:  
   build-test-and-deploy:    
