--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:  
   python: circleci/python@1.0.0
+  aws-cli: circleci/aws-cli@1.2.1
 
 jobs:  
   build-and-test:    
@@ -29,12 +30,39 @@ jobs:
       - run:
           name: Add App to Zipfile
           command: zip -g ./function.zip -r app
-    
+      - persist_to_workspace:
+          root: .
+          paths:
+            - function.zip
+      
+  deploy-dev: 
+    executor: aws-cli/default  
+    steps:    
+      - attach_workspace:
+          at: ./
+      - aws-cli/setup:
+          aws-region: AWS_DEFAULT_REGION
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+      - run:
+          name: Upload to S3        
+          command: aws s3 cp function.zip s3://cicd-test-1/function.zip
+      - run:        
+          name: Deploy new Lambda        
+          command: aws lambda update-function-code --function-name cicd-test-1 --s3-bucket cicd-test-1 --s3-key function.zip
+
 workflows:  
   build-test-and-deploy:    
     jobs:
       - build-and-test:
           filters:            
+            branches:
+              only:
+                - cicd-demo-dev
+      - deploy-dev:
+          requires:
+            - build-and-test
+          filters:
             branches:
               only:
                 - cicd-demo-dev
