--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
       - run:
           name: Install Dependencies
           command: pip install -r requirements.txt
+    	- run:
+          name: Create ENV file
+          command: env > .env
       - run:
           name: Test
           command: pytest
@@ -29,7 +32,7 @@ jobs:
             zip -r9 ../../../../function.zip .
       - run:
           name: Add App to Zipfile
-          command: zip -g ./function.zip -r app
+          command: zip -g ./function.zip .env -r app
       - persist_to_workspace:
           root: .
           paths:
