--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ py==1.9.0
 pydantic==1.6.1
 pyparsing==2.4.7
 pytest==6.0.2
+python-dotenv==0.14.0
 python-multipart==0.0.5
 PyYAML==5.3.1
 requests==2.24.0
